--- a/js/data/FinancialTimes_Bram-van-osta/assets/css/style.css
+++ b/js/data/FinancialTimes_Bram-van-osta/assets/css/style.css
@@ -1,4 +1,10 @@
-svg text {
-    font-size: 10px;
+.label {
+    font-size: 12px;
+    font-family: 'Helvetica';
+}
+
+.number {
+    font-weight: bold;
+    font-size: 11px;
     font-family: 'Helvetica';
 }
